overflow fixed

--- a/src/Bootstrap/less/theme/page-api-keys.less
+++ b/src/Bootstrap/less/theme/page-api-keys.less
@@ -41,7 +41,6 @@
 
     .available-packages {
       .panel-body {
-        overflow: auto;
         padding-top: 0;
         padding-bottom: 0;
         @media (max-width: @screen-sm-min) {
@@ -66,16 +65,28 @@
     }
 
     .select-packages-inputs {
-      display: flex;
-      flex-direction: column;
+      @media (min-width: @screen-sm-min) {
+        position: relative;
+      
+        > div {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
 
-      .available-packages-container {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
+          .available-packages-container {
+            flex: 1 1 0;
+            display: flex;
+            flex-direction: column;
 
-        .available-packages {
-          flex: 1;
+            .available-packages {
+              flex: 1 1 0;
+              overflow-y: auto;
+            }
+          }
         }
       }
     }
